Cleaned up a lot of explicit styles and CSS from forms and other library elements

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -10,6 +10,17 @@
   }
 }
 
+.set-title-color(@c)
+{
+  .set-color(@c);
+
+  a:link,
+  a:visited,
+  {
+    //.set-color(lighten(@c, 20%));
+  }
+}
+
 .border-box()
 {
   box-sizing: border-box;
