--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -65,6 +65,13 @@
 @control_border_color: @standard_border_color;
 @control_background_url: '';
 
+@cell_selected_background_color: @control_background_color;
+@cell_highlight_background_color: @accent_background_color;
+@cell_selected_background_url: '';
+@cell_highlight_background_url: '';
+@cell_highlight_text_color: @text_color;
+@cell_selected_text_color: @text_color;
+
 @edit_control_text_color: @control_text_color;
 @edit_control_background_color: @control_background_color;
 @edit_control_background_url: @control_background_url;
@@ -92,4 +99,5 @@
 @message_box_link_color: #66C;
 
 @graph_background_color: @title_color;
-@graph_background_url: @selected_control_background_url;
+@graph_foreground_url: @selected_control_background_url;
+@graph_foreground_color: @title_color;
