--- a/site/resources/styles/themes/hochzeit.less
+++ b/site/resources/styles/themes/hochzeit.less
@@ -46,3 +46,4 @@ http://www.earthli.com/software/webcore
 @selected_control_background_url: 'hochzeit/fossil_paper.jpg';
 @banner_background_url: 'hochzeit/fossil_paper.jpg';
 @control_background_url: 'hochzeit/fossil_paper_light.jpg';
+@cell_selected_background_url: @control_background_url;
