--- a/site/resources/styles/themes/osx.css
+++ b/site/resources/styles/themes/osx.css
@@ -216,9 +216,11 @@ div.info-box-top {
 }
 .cell-highlight {
   background-color: #e1e1e1;
+  color: #222222;
 }
 .cell-selected {
   background-color: #e9e9e9;
+  color: #222222;
 }
 .caution,
 .warning,
