--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -296,7 +296,7 @@ button
   border: @hairline_border_width solid @standard_border_color;
   border-radius: @standard_border_radius;
   line-height: normal;
-  text-align: left;
+  text-align: center;
 }
 
 a.button:link, a.button:visited
