--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -158,7 +158,7 @@ table
   {
     > tbody > tr
     {
-      > td,
+      > td:not([colspan]),
       > th
       {
         &:first-child
@@ -1695,7 +1695,7 @@ hr
 
 .unavailable
 {
-  opacity: 0.25;
+  opacity: 0.20;
 }
 
 .top-left-overlay
