--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -464,6 +464,7 @@ pre > code
   padding-left: @standard_spacing;
   padding-bottom: @small_spacing;
   border-bottom: @hairline_border_width solid @standard_border_color;
+  line-height: @text_flow_line_height;
 }
 
 .top-box
@@ -492,10 +493,13 @@ pre > code
 
 .button-content
 {
-  button:first-child,
-  a.button:first-child
+  *:first-child
   {
-    margin-left: -@standard_border_radius - @hairline_border_width;
+    button:first-child,
+    a.button:first-child
+    {
+      margin-left: -@standard_border_radius - @hairline_border_width;
+    }
   }
 }
 
@@ -1333,6 +1337,12 @@ ul.minimal
   {
     margin: @small_spacing 0;
     padding: 0;
+  }
+
+  ul,
+  ol
+  {
+    list-style-type: disc;
   }
 }
 
