--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -48,7 +48,7 @@
         margin-top: @standard_spacing;
       }
 
-      .toggle
+      span.toggle
       {
         float: left;
         margin-right: @small_spacing;
